myproject/temp/objects/PComment__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PComments</relationshipLabel>
        <relationshipName>PComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PComment</label>
    <nameField>
        <displayFormat>PCOMM-{0000}</displayFormat>
        <label>PComment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PComments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>